--- a/coach_espacio/public/css/producto.css
+++ b/coach_espacio/public/css/producto.css
@@ -2,7 +2,6 @@
 	padding-top: 60px;
 	width: 70%;
 	margin:auto;
-	
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
@@ -39,7 +38,15 @@
 	font-size: 2.5em;
 }
 
+.product-select{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-bottom: 5px;
+}
+
 .product-price{
+	display: inline-block;
 	font-size: 1.8em;
 	padding-left: 20px;
 }
@@ -65,12 +72,28 @@
 }
 
 .stock:hover{
-	cursor:aut;o
+	cursor:auto;
 }
 
+.qty-button{
+	color: white;
+	font-size: 1.8em;
+	margin: 0 10px;
+}
+
+.qty-button:hover{
+	cursor: pointer;
+}
+
+
 .product-qty{
-	width: 10%;
-	height: 20px;
+	display: inline-block;
+	font-size: 1.8em;
+	background-color: rgba(255,255,255,1);
+	color: #444;
+	width: 40px;
+	height: 40px;
+	margin-left: 10px;
 }
 
 .category{
@@ -79,4 +102,24 @@
 	margin-left: 10px;
 	margin-bottom: 15px;
 	text-align: left;
+}
+
+.success{
+	text-align: center;
+	color: green;
+	width: 40%;
+	padding:10px;
+	margin: auto;
+	border: 2px solid green;
+	border-radius: 20px;
+}
+
+.error{
+	text-align: center;
+	color: red;
+	width: 40%;
+	padding:10px;
+	margin: auto;
+	border: 2px solid red;
+	border-radius: 20px;
 }
