--- a/coach_espacio/public/css/productos.css
+++ b/coach_espacio/public/css/productos.css
@@ -75,6 +75,21 @@
 	left: -8px;
 }
 
+.pagination{
+	padding: 20px;
+	display: flex;
+	width: 15%;
+	margin:auto;
+	font-size: 1.3em;
+	justify-content: space-around;
+	font-weight: bold;
+	color: #444;
+}
+
+.pagination .active{
+	color: rgb(49,179,217);
+}
+
 @media(max-width: 935px){
 	.products-container{
 		width: 90%;
@@ -84,6 +99,10 @@
 		width: 300px;
 		font-size: .8em;
 	}	
+
+	.pagination{
+		width: 20%;
+	}
 }
 
 @media(max-width: 785px){
@@ -95,6 +114,9 @@
 		width: 260px;
 		font-size: .8em;
 	}	
+	.pagination{
+		width: 30%;
+	}
 }
 
 @media(max-width: 615px){
@@ -106,6 +128,10 @@
 		width: 200px;
 		font-size: .6em;
 	}	
+
+	.pagination{
+		width: 45%;
+	}
 }
 
 @media(max-width: 436px){
@@ -119,4 +145,7 @@
 		width: 260px;
 		font-size: .8em;
 	}	
+	.pagination{
+		width: 50%;
+	}
 }
