--- a/coach_espacio/public/css/producto.css
+++ b/coach_espacio/public/css/producto.css
@@ -107,23 +107,27 @@
 }
 
 .success{
+	display: none;
 	text-align: center;
 	color: green;
-	width: 40%;
 	padding:10px;
 	margin: auto;
 	border: 2px solid green;
 	border-radius: 20px;
+	transition: all 1s;
+	width: 70%;
 }
 
 .error{
+	width: 70%;
+	display: none;
 	text-align: center;
 	color: red;
-	width: 40%;
 	padding:10px;
 	margin: auto;
 	border: 2px solid red;
-	border-radius: 20px;
+	border-radius: 20px;z-index: 200;
+	transition: all 1s;
 }
 
 @media(max-width: 1120px){
