--- a/coach_espacio/public/css/admin.css
+++ b/coach_espacio/public/css/admin.css
@@ -7,6 +7,12 @@
 	justify-content: space-around;
 	font-weight: bold;
 	color: #444;
+	background-color: white;
+}
+
+.pagination a{
+
+	
 }
 
 .pagination .active{
