--- a/coach_espacio/public/css/home.css
+++ b/coach_espacio/public/css/home.css
@@ -158,27 +158,6 @@ button:hover{
 	margin-top: -60px;
 	margin-bottom: 20px;
 }
-/*
-
-.align-right{
-	width: 50%;
-	margin: 40px 0;
-	margin-left: 100px;
-	float:right;
-
-}
-
-.align-left{
-	width: 50%;
-	margin: 40px 0;
-	margin-right: 100px;
-	float:left;
-}
-
-.align-center{
-	width: 50%;
-	margin: 40px auto;
-}*/
 
 .intro-description-title{
 	font-weight: normal;
@@ -256,8 +235,48 @@ button:hover{
 }
 
 
-/*Media for tablets and big devices*/
+/********************************************************
+*					COUNT USERS							*
+********************************************************/
+.count-users{
+	background-image: url("../images/backgrounds/blur-office.jpg");
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	margin-top: 40px;
+	background-color: white;
+	height: 60vh;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+	align-items: center;
+	justify-content: center;
+}
 
+.user-text{
+	font-family: helvetica;
+	text-transform: uppercase;
+	color: #444;
+	margin-bottom:30px;
+	font-weight: 900;
+}
+
+.user-number{
+	width: 120px;
+	height: 120px;
+	border-radius: 20px;
+	background-color: #82D2E8;
+	color:white;
+	opacity: .7;
+	font-size: 2em;
+
+}
+
+#users-count{
+	text-align: center;
+	line-height: 120px;
+}
 
 
 @media (max-width: 1005px){
