--- a/coach_espacio/public/css/main.css
+++ b/coach_espacio/public/css/main.css
@@ -167,7 +167,7 @@ button{
 }
 
 .horizontal-menu li{
-	height: 100%;
+	/*height: 100%;*/
 	display: inline-block;
 }
 
@@ -186,12 +186,13 @@ button{
 	align-items: center;
 }
 
-.menu-log-user-image{
+.ham-menu-log-user-image{
 	height: 40px;
 	width: 40px;
 	display: block;
 	border-radius:50px; 
 	color: chocolate;
+	margin-right: 10px;
 }
 
 .menu-log-name{
@@ -211,8 +212,8 @@ button{
 .ham-options{
 	position: absolute;
     visibility: hidden;
-    top:50px;
-    z-index: 500;
+    top:40px;
+    z-index: 600;
 }
 
 .ham-options li{
@@ -291,8 +292,6 @@ button{
     margin-left: 3%;
 }
 
-}
-
 /*===============================
  FOOTER > footer-nav
 =================================*/
@@ -310,7 +309,6 @@ button{
 }
 
 .main-footer{
-	/*background-image: url("../images/backgrounds/footer-bg-2.png");*/
 	position: relative;
 	background-color: rgba(52,180,221,.7);
 	background-size: cover;
