--- a/coach_espacio/public/css/home.css
+++ b/coach_espacio/public/css/home.css
@@ -23,13 +23,12 @@ button:hover{
 }
 
 .banner{
-	background-color:grey;
+	background-color:white;
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
 	width: 100%;
 	height: 100vh;
-	/*transition: all 1s ease-in-out 0s;*/
 }
 
 .banner-image{
