--- a/coach_espacio/public/css/producto.css
+++ b/coach_espacio/public/css/producto.css
@@ -16,6 +16,7 @@
 .product-image{
 	width: 100%;
 	height: auto;
+	max-height: 600px;
 	border: 1px solid rgba(100,200,228,.5);
 	border-radius: 10px;
 }
